Fixed intro with hint to go to the right.

--- a/index.html
+++ b/index.html
@@ -47,14 +47,15 @@
                         <h2 style="color: white">Application Development</h2>
                         <h2 style="color: white">in the Cloud Workshop</h2>
                     </div>
-                    <div style="width: 1056px; height: 200px; color: white">
-                        <h3><a href="http://appdevcloudworkshop.github.io" style="color: red" target="_blank">http://appdevcloudworkshop.github.io</a></h3>
+                    <div style="width: 1056px; height: 150px; color: white">
                     </div>
-                    <div style="width: 600px; height: 300px; text-align: left; color: white">
+                    <div style="width: 1056px; height: 300px; text-align: left; color: white">
                         Eric D. Schabell<br/>
                         Global Technology Evangelist Director<br/>
                         <a href="http://twitter.com/ericschabell" style="color: red" target="_blank">@ericschabell</a><br/>
                         <a href="http://schabell.org" style="color: red">http://schabell.org</a>
+                        <br><br>
+                        <h5 style="color: white;" align="right">Next slide to the right... ==></h5>
                     </div>
 										<div style="color: white" align="center">
 											<a href="http://www.simplehitcounter.com" target="_blank">
