Updated to include OCP 3.9

--- a/index.html
+++ b/index.html
@@ -95,8 +95,10 @@
                         <ul style="color: white">
                             <li><i><a href="introduction-ocp36.html" target="_blank" style="color: red"><b>Start Destinasia
                                 workshop on OpenShift Container Platform 3.6</b></a></i></li>
-                            <li><i><a href="introduction.html" target="_blank" style="color: red"><b>Start Destinasia
+                            <li><i><a href="introduction-ocp37.html" target="_blank" style="color: red"><b>Start Destinasia
                                 workshop on OpenShift Container Platform 3.7</b></a></i></li>
+                            <li><i><a href="introduction.html" target="_blank" style="color: red"><b>Start Destinasia
+                                workshop on OpenShift Container Platform 3.9</b></a></i></li>
                         </ul>
                     </div>
                 </section>
