--- a/introduction-ocp37.html
+++ b/introduction-ocp37.html
@@ -4,9 +4,9 @@
 <head>
     <meta charset="utf-8">
 
-    <title>Destinasia Workshop Intro OCP 3.9</title>
+    <title>Destinasia Workshop Intro OCP 3.7</title>
 
-    <meta name="description" content="Destinasia Workshop Intro OCP 3.9">
+    <meta name="description" content="Destinasia Workshop Intro OCP 3.7">
     <meta name="author" content="Eric D. Schabell">
 
     <meta name="apple-mobile-web-app-capable" content="yes" />
@@ -133,7 +133,7 @@
                 <ul>
                     <li>Base needs:</li>
                     <ul>
-                        <li><a href="https://access.redhat.com/downloads/content/290" style="color: midnightblue" target="_blank"><b>OpenShift CLI v3.9.14</b></a></li>
+                        <li><a href="https://access.redhat.com/downloads/content/290" style="color: midnightblue" target="_blank"><b>OpenShift CLI v3.7.9</b></a></li>
                         <li><a href="https://www.virtualbox.org/wiki/Downloads" style="color: midnightblue" target="_blank"><b>VirtualBox for Windows and OSX</b></a></li>
                         <li><a href="https://github.com/dhiltgen/docker-machine-kvm/releases" style="color: midnightblue" target="_blank"><b>KVM for Linux</b></a></li>
                         <li>Ansible playbook tooling:</li>
@@ -412,7 +412,7 @@
                 </h5>
             </div>
             <div style="width: 1056px; height: 150px;">
-                <h5 style="color: grey"><b>Pre-requisites:</b> <i>Laptop with 8GB RAM, OpenShift Container Platform 3.9,
+                <h5 style="color: grey"><b>Pre-requisites:</b> <i>Laptop with 8GB RAM, OpenShift Container Platform 3.7,
                     JBoss EAP 7.0, JBoss BRMS 6.4</i></h5>
             </div>
         </section>
@@ -436,7 +436,7 @@
         </section>
         <section>
             <h2>LET'S GET STARTED...</h2>
-            <h3><a href="lab01.html" style="color: midnightblue" target="_blank">Lab 1 - Install OpenShift Container Platform</a></h3>
+            <h3><a href="lab01-ocp37.html" style="color: midnightblue" target="_blank">Lab 1 - Install OpenShift Container Platform</a></h3>
         </section>
     </div>
 </div>
