--- a/lab01-ocp37.html
+++ b/lab01-ocp37.html
@@ -4,9 +4,9 @@
 <head>
     <meta charset="utf-8">
 
-    <title>Installing OCP 3.9</title>
+    <title>Installing OCP 3.7</title>
 
-    <meta name="description" content="Installing OpenShift Container Platform 3.9">
+    <meta name="description" content="Installing OpenShift Container Platform 3.7">
     <meta name="author" content="Eric D. Schabell">
 
     <meta name="apple-mobile-web-app-capable" content="yes" />
@@ -45,7 +45,7 @@
         <section>
             <h2>LAB 1</h2>
             <h3>Install OpenShift Container</h3>
-            <h3>Platform 3.9</h3>
+            <h3>Platform 3.7</h3>
         </section>
 
         <section>
@@ -434,7 +434,7 @@
 
         <section>
             <h2>UP NEXT...</h2>
-            <h3><a href="lab02.html" style="color: midnightblue" target="_blank">Lab 2 - Install JBoss BRMS</a></h3>
+            <h3><a href="lab02-ocp37.html" style="color: midnightblue" target="_blank">Lab 2 - Install JBoss BRMS</a></h3>
         </section>
     </div>
 </div>
