Updated lab 02 for OCP 3.9 images.

--- a/lab02.html
+++ b/lab02.html
@@ -123,11 +123,11 @@
 
         <section>
             <div style="width: 1056px; height: 120px;">
-                <h2>VIEW OCP PROJECT</h2>
-                <h5>Log in to view AppDev in Cloud...</h5>
+                <h2>VIEW PROJECTS</h2>
+                <h5>Log in to view Agile Cloud Integration...</h5>
             </div>
             <div style="width: 1056px; height: 600px;">
-                <img src="images/destinasia-workshop/image17-1.png">
+                <img src="images/destinasia-workshop/image17-2.png">
             </div>
         </section>
 
@@ -143,11 +143,11 @@
 
         <section>
             <div style="width: 1056px; height: 120px;">
-                <h2>VIEW OCP BUILD</h2>
+                <h2>VIEW BUILD</h2>
                 <h5>Click on Monitoring, open destinasia-rules-demo build...</h5>
             </div>
             <div style="width: 1056px; height: 600px;">
-                <img src="images/destinasia-workshop/image19-1.png">
+                <img src="images/destinasia-workshop/image19-2.png">
             </div>
         </section>
 
@@ -173,10 +173,10 @@
 
         <section>
             <div style="width: 1056px; height: 120px;">
-                <h2>VIEW OCP PROJECT</h2>
+                <h2>VIEW DEPLOYMENTS</h2>
             </div>
             <div style="width: 1056px; height: 600px;">
-                <img src="images/destinasia-workshop/image22-1.png">
+                <img src="images/destinasia-workshop/image22-2.png">
             </div>
         </section>
 
@@ -219,7 +219,7 @@
                 <h2>END LAB 2</h2>
             </div>
             <div style="width: 1056px; height: 500px;">
-                <img style="border: 2px solid black" src="images/destinasia-workshop/image25-1.png">
+                <img style="border: 2px solid black" src="images/destinasia-workshop/image22-2.png">
             </div>
         </section>
 
