--- a/index.html
+++ b/index.html
@@ -46,6 +46,7 @@
                     <div style="width: 1056px; height: 250px; color: white">
                         <h2 style="color: white">Application Development</h2>
                         <h2 style="color: white">in the Cloud Workshop</h2>
+			    <small>Update: June 2018 moved to <a href="https://appdevcloudworkshop.gitlab.io">Gitlab</a></small>
                     </div>
                     <div style="width: 1056px; height: 150px; color: white">
                     </div>
