--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
                     <div style="width: 1056px; height: 250px; color: white">
                         <h2 style="color: white">Application Development</h2>
                         <h2 style="color: white">in the Cloud Workshop</h2>
-			    <small>Update: June 2018 moved to <a href="https://appdevcloudworkshop.gitlab.io">Gitlab</a></small>
+			<small style="color: white">Update: June 2018 moved to <a href="https://appdevcloudworkshop.gitlab.io">Gitlab</a></small>
                     </div>
                     <div style="width: 1056px; height: 150px; color: white">
                     </div>
@@ -55,8 +55,6 @@
                         Global Technology Evangelist Director<br/>
                         <a href="http://twitter.com/ericschabell" style="color: red" target="_blank">@ericschabell</a><br/>
                         <a href="http://schabell.org" style="color: red">http://schabell.org</a>
-                        <br><br>
-                        <h5 style="color: white;" align="right">Next slide to the right... ==></h5>
                     </div>
 										<div style="color: white" align="center">
 											<a href="http://www.simplehitcounter.com" target="_blank">
