--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
                     <div style="width: 1056px; height: 250px; color: white">
                         <h2 style="color: white">Application Development</h2>
                         <h2 style="color: white">in the Cloud Workshop</h2>
-			<h5 style="color: white">Update: June 2018 moved to <a href="https://appdevcloudworkshop.gitlab.io" style="color: red">Gitlab</a></h5>
+			<h5 style="color: white"><a href="https://appdevcloudworkshop.gitlab.io" style="color: red">Update: June 2018 moved to Gitlab</a></h5>
                     </div>
                     <div style="width: 1056px; height: 150px; color: white">
                     </div>
